--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "next build",
+    "export": "next build && next export",
+    "deploy": "touch out/.nojekyll && npx gh-pages -r git@github.com:ConradSchmidt/carbon-tutorial-nextjs.git --dotfiles -f -d out",
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
